--- a/index.html
+++ b/index.html
@@ -91,27 +91,27 @@
       <h2>Serviços</h2>
       <div class="services">
         <div class="card">
-          <img src="img/Samsung.png" alt="Telefone">
+          <img src="Samsung.png" alt="Telefone">
           <h3>Smartphone</h3>
           <p>Troca de tela, conector, bateria, limpeza e muito mais.</p>
         </div>
         <div class="card">
-          <img src="img/Notebook.png" alt="Notebook">
+          <img src="Notebook.png" alt="Notebook">
           <h3>Notebooks</h3>
           <p>Formatação, troca de HD, upgrades e manutenção preventiva.</p>
         </div>
         <div class="card">
-          <img src="img/Computador.png" alt="Computador">
+          <img src="Computador.png" alt="Computador">
           <h3>Computadores</h3>
           <p>Montagem, limpeza, reparos e configuração personalizada.</p>
         </div>
         <div class="card">
-          <img src="img/Windows.png" alt="Windows">
+          <img src="Windows.png" alt="Windows">
           <h3>Atualização Windows</h3>
           <p>Atualizamos seu sistema.</p>
         </div>
         <div class="card">
-          <img src="img/Iphone.png" alt="iPhone">
+          <img src="Iphone.png" alt="iPhone">
           <h3>Atualização iPhone</h3>
           <p>iOS atualizado com segurança.</p>
         </div>
@@ -121,12 +121,12 @@
           <p>Atualize seu Android.</p>
         </div>
         <div class="card">
-          <img src="img/Landing page.png" alt="Android">
+          <img src="Landing page.png" alt="Android">
           <h3>Criação de sites</h3>
           <p>Landing Page profissional.</p>
         </div>
         <div class="card">
-          <img src="img/Sistema web.png" alt="Android">
+          <img src="Sistema web.png" alt="Android">
           <h3>Sistema Web</h3>
           <p>Sistema web para sua empresa.</p>
         </div>
@@ -136,7 +136,7 @@
     <section class="whatsapp">
       <h2>Orçamento e Contato</h2>
       <p>Fale conosco agora mesmo pelo WhatsApp e faça seu orçamento gratuito.</p>
-      <a href="https://wa.me/SEU_NUMERO_AQUI" target="_blank">Falar no WhatsApp</a>
+      <a href="https://wa.me/5531994513756" target="_blank">Falar no WhatsApp</a>
     </section>
   </main>
 
