--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Tec Pereira BH. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Tec Pereira BH. <br>Todos os direitos reservados.</p>
   </footer>
 </body>
 </html>
