--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <p>iOS atualizado com segurança.</p>
         </div>
         <div class="card">
-          <img src="android" alt="Android">
+          <img src="android.png" alt="Android">
           <h3>Atualização Android</h3>
           <p>Atualize seu Android.</p>
         </div>
