--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Tec Pereira BH - Conserto e manutenção de celulares, notebooks, computadores, criação de sites e sistemas web.">
+  <meta name="keywords" content="conserto celular, manutenção notebook, criação de sites, sistema web, Tec Pereira BH">
+  <meta name="author" content="Tec Pereira BH">
+  <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+  <link rel="shortcut icon" href="favicon/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/" />
+  <link rel="manifest" href="/site.webmanifest" />
+  
   <title>Tec Pereira BH</title>
   <style>
     body {
@@ -91,42 +100,42 @@
       <h2>Serviços</h2>
       <div class="services">
         <div class="card">
-          <img src="Samsung.png" alt="Telefone">
+          <img src="img/Samsung.png" alt="Telefone">
           <h3>Smartphone</h3>
           <p>Troca de tela, conector, bateria, limpeza e muito mais.</p>
         </div>
         <div class="card">
-          <img src="Notebook.png" alt="Notebook">
+          <img src="img/Notebook.png" alt="Notebook">
           <h3>Notebooks</h3>
           <p>Formatação, troca de HD, upgrades e manutenção preventiva.</p>
         </div>
         <div class="card">
-          <img src="Computador.png" alt="Computador">
+          <img src="img/Computador.png" alt="Computador">
           <h3>Computadores</h3>
           <p>Montagem, limpeza, reparos e configuração personalizada.</p>
         </div>
         <div class="card">
-          <img src="Windows.png" alt="Windows">
+          <img src="img/Windows.png" alt="Windows">
           <h3>Atualização Windows</h3>
           <p>Atualizamos seu sistema.</p>
         </div>
         <div class="card">
-          <img src="Iphone.png" alt="iPhone">
+          <img src="img/Iphone.png" alt="iPhone">
           <h3>Atualização iPhone</h3>
           <p>iOS atualizado com segurança.</p>
         </div>
         <div class="card">
-          <img src="android.png" alt="Android">
+          <img src="https://cdn-icons-png.flaticon.com/512/888/888879.png" alt="Android">
           <h3>Atualização Android</h3>
           <p>Atualize seu Android.</p>
         </div>
         <div class="card">
-          <img src="Landing page.png" alt="Android">
+          <img src="img/Landing page.png" alt="Android">
           <h3>Criação de sites</h3>
           <p>Landing Page profissional.</p>
         </div>
         <div class="card">
-          <img src="Sistema web.png" alt="Android">
+          <img src="img/Sistema web.png" alt="Android">
           <h3>Sistema Web</h3>
           <p>Sistema web para sua empresa.</p>
         </div>
@@ -136,12 +145,12 @@
     <section class="whatsapp">
       <h2>Orçamento e Contato</h2>
       <p>Fale conosco agora mesmo pelo WhatsApp e faça seu orçamento gratuito.</p>
-      <a href="https://wa.me/5531994513756" target="_blank">Falar no WhatsApp</a>
+      <a href="https://wa.me/SEU_NUMERO_AQUI" target="_blank">Falar no WhatsApp</a>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Tec Pereira BH. <br>Todos os direitos reservados.</p>
+    <p>&copy; 2025 Tec Pereira BH. Todos os direitos reservados.</p>
   </footer>
 </body>
 </html>
