--- a/index.html
+++ b/index.html
@@ -105,22 +105,22 @@
           <p>Troca de tela, conector, bateria, limpeza e muito mais.</p>
         </div>
         <div class="card">
-          <img src="/img/Notebook.png" alt="Notebook">
+          <img src="img/Notebook.png" alt="Notebook">
           <h3>Notebooks</h3>
           <p>Formatação, troca de HD, upgrades e manutenção preventiva.</p>
         </div>
         <div class="card">
-          <img src="/img/Computador.png" alt="Computador">
+          <img src="img/Computador.png" alt="Computador">
           <h3>Computadores</h3>
           <p>Montagem, limpeza, reparos e configuração personalizada.</p>
         </div>
         <div class="card">
-          <img src="/img/Windows.png" alt="Windows">
+          <img src="img/Windows.png" alt="Windows">
           <h3>Atualização Windows</h3>
           <p>Atualizamos seu sistema.</p>
         </div>
         <div class="card">
-          <img src="/img/Iphone.png" alt="iPhone">
+          <img src="img/Iphone.png" alt="iPhone">
           <h3>Atualização iPhone</h3>
           <p>iOS atualizado com segurança.</p>
         </div>
@@ -130,12 +130,12 @@
           <p>Atualize seu Android.</p>
         </div>
         <div class="card">
-          <img src="/img/Landing page.png" alt="Android">
+          <img src="img/Landing page.png" alt="Android">
           <h3>Criação de sites</h3>
           <p>Landing Page profissional.</p>
         </div>
         <div class="card">
-          <img src="/img/Sistema web.png" alt="Android">
+          <img src="img/Sistema web.png" alt="Android">
           <h3>Sistema Web</h3>
           <p>Sistema web para sua empresa.</p>
         </div>
