--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <h2>Serviços</h2>
       <div class="services">
         <div class="card">
-          <img src="/img/Samsung.png" alt="Telefone">
+          <img src="img/Samsung.png" alt="Telefone">
           <h3>Smartphone</h3>
           <p>Troca de tela, conector, bateria, limpeza e muito mais.</p>
         </div>
