--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <section class="whatsapp">
       <h2>Orçamento e Contato</h2>
       <p>Fale conosco agora mesmo pelo WhatsApp e faça seu orçamento gratuito.</p>
-      <a href="https://wa.me/55 31920048260" target="_blank">Falar no WhatsApp</a>
+      <a href="https://wa.me/5531920048260" target="_blank">Falar no WhatsApp</a>
     </section>
   </main>
 
